fix(mailviewer): Add horizontal scroll to message view

--- a/src/app/mailviewer/singlemailviewer.component.css
+++ b/src/app/mailviewer/singlemailviewer.component.css
@@ -70,7 +70,8 @@
 }
 
 #messageContent {
-    overflow: hidden;
+    overflow-y: hidden;
+    overflow-x: scroll;
     margin: 0 2%;
     width: 96%;
     white-space: pre-wrap;
